roaring_dart/lib/generated_bindings.dart


  late final _roaring_bitmap_get_indexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Uint32)>>('roaring_bitmap_get_index');
  late final _roaring_bitmap_get_index = _roaring_bitmap_get_indexPtr
      .asFunction<int Function(ffi.Pointer<roaring_bitmap_t>, int)>();

  /// Returns the smallest value in the set, or UINT32_MAX if the set is empty.
  int roaring_bitmap_minimum(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_minimum(
      r,
    );
  }

  late final _roaring_bitmap_minimumPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_minimum');
  late final _roaring_bitmap_minimum = _roaring_bitmap_minimumPtr
      .asFunction<int Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Returns the greatest value in the set, or 0 if the set is empty.
  int roaring_bitmap_maximum(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_maximum(
      r,
    );
  }

  late final _roaring_bitmap_maximumPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_bitmap_maximum');
  late final _roaring_bitmap_maximum = _roaring_bitmap_maximumPtr
      .asFunction<int Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// (For advanced users.)
  ///
  /// Collect statistics about the bitmap, see roaring_types.h for
  /// a description of roaring_statistics_t
  void roaring_bitmap_statistics(
    ffi.Pointer<roaring_bitmap_t> r,
    ffi.Pointer<roaring_statistics_t> stat,
  ) {
    return _roaring_bitmap_statistics(
      r,
      stat,
    );
  }

  late final _roaring_bitmap_statisticsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_statistics_t>)>>('roaring_bitmap_statistics');
  late final _roaring_bitmap_statistics =
      _roaring_bitmap_statisticsPtr.asFunction<
          void Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_statistics_t>)>();

  /// Initialize an iterator object that can be used to iterate through the
  /// values. If there is a  value, then this iterator points to the first value
  /// and `it->has_value` is true. The value is in `it->current_value`.
  void roaring_init_iterator(
    ffi.Pointer<roaring_bitmap_t> r,
    ffi.Pointer<roaring_uint32_iterator_t> newit,
  ) {
    return _roaring_init_iterator(
      r,
      newit,
    );
  }

  late final _roaring_init_iteratorPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<roaring_bitmap_t>,
                  ffi.Pointer<roaring_uint32_iterator_t>)>>(
      'roaring_init_iterator');
  late final _roaring_init_iterator = _roaring_init_iteratorPtr.asFunction<
      void Function(ffi.Pointer<roaring_bitmap_t>,
          ffi.Pointer<roaring_uint32_iterator_t>)>();

  /// Initialize an iterator object that can be used to iterate through the
  /// values. If there is a value, then this iterator points to the last value
  /// and `it->has_value` is true. The value is in `it->current_value`.
  void roaring_init_iterator_last(
    ffi.Pointer<roaring_bitmap_t> r,
    ffi.Pointer<roaring_uint32_iterator_t> newit,
  ) {
    return _roaring_init_iterator_last(
      r,
      newit,
    );
  }

  late final _roaring_init_iterator_lastPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<roaring_bitmap_t>,
                  ffi.Pointer<roaring_uint32_iterator_t>)>>(
      'roaring_init_iterator_last');
  late final _roaring_init_iterator_last =
      _roaring_init_iterator_lastPtr.asFunction<
          void Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_uint32_iterator_t>)>();

  /// Create an iterator object that can be used to iterate through the values.
  /// Caller is responsible for calling `roaring_free_iterator()`.
  ///
  /// The iterator is initialized (this function calls `roaring_init_iterator()`)
  /// If there is a value, then this iterator points to the first value and
  /// `it->has_value` is true.  The value is in `it->current_value`.
  ffi.Pointer<roaring_uint32_iterator_t> roaring_create_iterator(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_create_iterator(
      r,
    );
  }

  late final _roaring_create_iteratorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_uint32_iterator_t> Function(
              ffi.Pointer<roaring_bitmap_t>)>>('roaring_create_iterator');
  late final _roaring_create_iterator = _roaring_create_iteratorPtr.asFunction<
      ffi.Pointer<roaring_uint32_iterator_t> Function(
          ffi.Pointer<roaring_bitmap_t>)>();

  /// Advance the iterator. If there is a new value, then `it->has_value` is true.
  /// The new value is in `it->current_value`. Values are traversed in increasing
  /// orders. For convenience, returns `it->has_value`.
  bool roaring_advance_uint32_iterator(
    ffi.Pointer<roaring_uint32_iterator_t> it,
  ) {
    return _roaring_advance_uint32_iterator(
      it,
    );
  }

  late final _roaring_advance_uint32_iteratorPtr = _lookup<
          ffi.NativeFunction<
              ffi.Bool Function(ffi.Pointer<roaring_uint32_iterator_t>)>>(
      'roaring_advance_uint32_iterator');
  late final _roaring_advance_uint32_iterator =
      _roaring_advance_uint32_iteratorPtr
          .asFunction<bool Function(ffi.Pointer<roaring_uint32_iterator_t>)>();

  /// Decrement the iterator. If there's a new value, then `it->has_value` is true.
  /// The new value is in `it->current_value`. Values are traversed in decreasing
  /// order. For convenience, returns `it->has_value`.
  bool roaring_previous_uint32_iterator(
    ffi.Pointer<roaring_uint32_iterator_t> it,
  ) {
    return _roaring_previous_uint32_iterator(
      it,
    );
  }

  late final _roaring_previous_uint32_iteratorPtr = _lookup<
          ffi.NativeFunction<
              ffi.Bool Function(ffi.Pointer<roaring_uint32_iterator_t>)>>(
      'roaring_previous_uint32_iterator');
  late final _roaring_previous_uint32_iterator =
      _roaring_previous_uint32_iteratorPtr
          .asFunction<bool Function(ffi.Pointer<roaring_uint32_iterator_t>)>();

  /// Move the iterator to the first value >= `val`. If there is a such a value,
  /// then `it->has_value` is true. The new value is in `it->current_value`.
  /// For convenience, returns `it->has_value`.
  bool roaring_move_uint32_iterator_equalorlarger(
    ffi.Pointer<roaring_uint32_iterator_t> it,
    int val,
  ) {
    return _roaring_move_uint32_iterator_equalorlarger(
      it,
      val,
    );
  }

  late final _roaring_move_uint32_iterator_equalorlargerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_uint32_iterator_t>,
              ffi.Uint32)>>('roaring_move_uint32_iterator_equalorlarger');
  late final _roaring_move_uint32_iterator_equalorlarger =
      _roaring_move_uint32_iterator_equalorlargerPtr.asFunction<
          bool Function(ffi.Pointer<roaring_uint32_iterator_t>, int)>();

  /// Creates a copy of an iterator.
  /// Caller must free it.
  ffi.Pointer<roaring_uint32_iterator_t> roaring_copy_uint32_iterator(
    ffi.Pointer<roaring_uint32_iterator_t> it,
  ) {
    return _roaring_copy_uint32_iterator(
      it,
    );
  }

  late final _roaring_copy_uint32_iteratorPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<roaring_uint32_iterator_t> Function(
                  ffi.Pointer<roaring_uint32_iterator_t>)>>(
      'roaring_copy_uint32_iterator');
  late final _roaring_copy_uint32_iterator =
      _roaring_copy_uint32_iteratorPtr.asFunction<
          ffi.Pointer<roaring_uint32_iterator_t> Function(
              ffi.Pointer<roaring_uint32_iterator_t>)>();

  /// Free memory following `roaring_create_iterator()`
  void roaring_free_uint32_iterator(
    ffi.Pointer<roaring_uint32_iterator_t> it,
  ) {
    return _roaring_free_uint32_iterator(
      it,
    );
  }

  late final _roaring_free_uint32_iteratorPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<roaring_uint32_iterator_t>)>>(
      'roaring_free_uint32_iterator');
  late final _roaring_free_uint32_iterator = _roaring_free_uint32_iteratorPtr
      .asFunction<void Function(ffi.Pointer<roaring_uint32_iterator_t>)>();

  int roaring_read_uint32_iterator(
    ffi.Pointer<roaring_uint32_iterator_t> it,
    ffi.Pointer<ffi.Uint32> buf,
    int count,
  ) {
    return _roaring_read_uint32_iterator(
      it,
      buf,
      count,
    );
  }

  late final _roaring_read_uint32_iteratorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(
              ffi.Pointer<roaring_uint32_iterator_t>,
              ffi.Pointer<ffi.Uint32>,
              ffi.Uint32)>>('roaring_read_uint32_iterator');
  late final _roaring_read_uint32_iterator =
      _roaring_read_uint32_iteratorPtr.asFunction<
          int Function(ffi.Pointer<roaring_uint32_iterator_t>,
              ffi.Pointer<ffi.Uint32>, int)>();

  void roaring_init_memory_hook(
    roaring_memory_t memory_hook,
  ) {
    return _roaring_init_memory_hook(
      memory_hook,
    );
  }

  late final _roaring_init_memory_hookPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(roaring_memory_t)>>(
          'roaring_init_memory_hook');
  late final _roaring_init_memory_hook = _roaring_init_memory_hookPtr
      .asFunction<void Function(roaring_memory_t)>();

  ffi.Pointer<ffi.Void> roaring_malloc(
    int arg0,
  ) {
    return _roaring_malloc(
      arg0,
    );
  }

  late final _roaring_mallocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Size)>>(
          'roaring_malloc');
  late final _roaring_malloc =
      _roaring_mallocPtr.asFunction<ffi.Pointer<ffi.Void> Function(int)>();

  ffi.Pointer<ffi.Void> roaring_realloc(
    ffi.Pointer<ffi.Void> arg0,
    int arg1,
  ) {
    return _roaring_realloc(
      arg0,
      arg1,
    );
  }

  late final _roaring_reallocPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Size)>>('roaring_realloc');
  late final _roaring_realloc = _roaring_reallocPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int)>();

  ffi.Pointer<ffi.Void> roaring_calloc(
    int arg0,
    int arg1,
  ) {
    return _roaring_calloc(
      arg0,
      arg1,
    );
  }

  late final _roaring_callocPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Size, ffi.Size)>>('roaring_calloc');
  late final _roaring_calloc =
      _roaring_callocPtr.asFunction<ffi.Pointer<ffi.Void> Function(int, int)>();

  void roaring_free(
    ffi.Pointer<ffi.Void> arg0,
  ) {
    return _roaring_free(
      arg0,
    );
  }

  late final _roaring_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'roaring_free');
  late final _roaring_free =
      _roaring_freePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> roaring_aligned_malloc(
    int arg0,
    int arg1,
  ) {
    return _roaring_aligned_malloc(
      arg0,
      arg1,
    );
  }

  late final _roaring_aligned_mallocPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Size, ffi.Size)>>('roaring_aligned_malloc');
  late final _roaring_aligned_malloc = _roaring_aligned_mallocPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(int, int)>();

  void roaring_aligned_free(
    ffi.Pointer<ffi.Void> arg0,
  ) {
    return _roaring_aligned_free(
      arg0,
    );
  }
